<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/REsultadp"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_marginBottom="30dp"/>

    <TextView
        android:id="@+id/txtResultado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/aqui_aparecer_el_resultado"
        android:textSize="18sp"
        android:background="#EEE"
        android:padding="20dp"/>

    <Button
        android:id="@+id/btnVolver"
        android:layout_width="248dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/volver" />

</LinearLayout>