<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#172F0C"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="40dp"
        android:text="CONVERSOR"
        android:textColor="#00529F"
        android:textSize="28sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:background="#3EB82D"
        android:elevation="4dp"
        android:orientation="vertical"
        android:padding="20dp">

        <EditText
            android:id="@+id/etAmount"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:backgroundTint="#131314"
            android:hint="@string/ingresa_el_monto"
            android:inputType="numberDecimal"
            android:paddingHorizontal="8dp"
            android:textColor="#333333"
            android:textColorHint="#1F1515"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/selecciona_moneda_origen"
            android:textColor="#3A3826"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinnerFrom"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="#00529F" />

    </LinearLayout>

    <Button
        android:id="@+id/btnConvertir"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:backgroundTint="#00529F"
        android:text="@string/convertir_a_usd"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        app:cornerRadius="10dp" />

    <Button
        android:id="@+id/btnVerHistorial"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#B9975B"
        android:text="@string/ver_historial"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        app:cornerRadius="10dp" />

    <Button
        android:id="@+id/btnAgregarMoneda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Agregar Nueva Moneda" />

</LinearLayout>